 * Patch files for Apache trunk and 2.4.x branch are now empty. mod_md will work with
   unpatched copies of those.
 * Converted pytest suite from python2 to python3. "make test" now calls "python3 -m pytest".
 * "server-status" page now carries a new table of all OCSP stapling certificates managed
   by mod_md stapling. Shifted ocsp related information in JSON "md-status" around a bit.
 * New directive "MDStaplingRenewWindow" to configure when OCSP response should be renewed.
 * OCSP response cleanup implemented and test case added.
 * bringing over APLOGNO() number assignments from apache subversion tree.
 * fixed a compile error on warn level about redefintion of AP_ENABLE_EXCEPTION_HOOK. Fixes #132.
 * New directive "MDStaplingKeepResponse" for controlling how long OCSP responses are
   kept in the store and older ones get removed at start up.
 * Errors reports by an ACME CA may include "subproblems", where several causes may be reported. 
   These are now part of the md-status reporting and also logged. Test cases added.
 * OCSP status and validity now part of md-status resource.
 * The number of log entries for a single job is now limited to 128. New entries will
   cause the oldest ones to be removed.
 * OCSP Stapling renewal jobs are now also persisted in the store.
 * Fixed a user-after-free when updating accounts from the server.
 * CA reported problems when authorization challenges fail are now visible in the renewal log.
 * backoff timing for failed ocsp retrieval attempts. specific ocsp update will be
   delayed accordingly.
 * ocsp responses up for renewal are checked periodically for updates in the store.
 * ocsp responses are now saved in and retrieved from store. Concurrent access in place, timed
   invalidation handling still missing.
 * first own ocsp test successful.
 * first ocsp responses are retrieved, but the cache does not work cross-process yet.
 * New directives "MDStapling on|off"