@@ -1,3 +1,4 @@
+ * Fixed a bug where notifications about an expiring certificate were sent out too often.
  * Patch files for Apache trunk and 2.4.x branch are now empty. mod_md will work with
    unpatched copies of those.
  * Converted pytest suite from python2 to python3. "make test" now calls "python3 -m pytest".
